6283 | 62 files | M game/bin/win64/engine2_strings.txt,  M game/bin/win64/resourcecompiler_strings.txt,  M game/bin/win64/soundsystem_strings.txt,  M game/citadel/bin/win64/client_strings.txt,  M game/citadel/bin/win64/server_strings.txt,  M game/citadel/pak01_dir.txt,  M game/citadel/pak01_dir/cfg/valve_builds.kv3,  M game/citadel/pak01_dir/panorama/layout/ability_hud_elements/element_charges.xml,  M game/citadel/pak01_dir/panorama/layout/ability_hud_elements/element_lunging_stab.xml,  M game/citadel/pak01_dir/panorama/layout/citadel_hud_pregame_simple.xml,  M game/citadel/pak01_dir/panorama/layout/popups/citadel_popup_hero_debut.xml,  M game/citadel/pak01_dir/panorama/layout/popups/citadel_popup_roster_select.xml,  M game/citadel/pak01_dir/panorama/layout/popups/popup_settings.xml,  M game/citadel/pak01_dir/panorama/styles/ability_hud_elements/abilities_synth.css,  M game/citadel/pak01_dir/panorama/styles/ability_hud_elements/element_charges.css,  M game/citadel/pak01_dir/panorama/styles/ability_hud_elements/element_lunging_
https://steamdb.info/patchnotes/21909877/

--- a/game/citadel/resource/localization/citadel_attributes/citadel_attributes_english.txt
+++ b/game/citadel/resource/localization/citadel_attributes/citadel_attributes_english.txt
@@ -85,6 +85,7 @@
 		"modifier_citadel_disarmed"				"Disarmed"
 		"modifier_citadel_tech_shield"		"Spirit Shield"
 		"modifier_citadel_revealed_on_map"		"Revealed"
+		"modifier_citadel_cursed"				"Cursed"
 
 		"modifier_item_disarmed"				"Disarmed"
 		"modifier_citadel_disarm_proc"			"Disarmed"
