--- a/game/citadel/resource/localization/citadel_main/citadel_main_english.txt
+++ b/game/citadel/resource/localization/citadel_main/citadel_main_english.txt
@@ -563,11 +563,11 @@
 		"Citadel_Shop_ActivePlacementTooltip_Title"					"Choose an ability slot to complete purchase"
 		"Citadel_Shop_ActivePlacementTooltip_Drag"					"Drag and drop to reassign current activated abilities"
 
-		"Citadel_Shop_SellMaxItems_Title"							"All slots are full!"
-		"Citadel_Shop_SellMaxItemsActive_Title"						"All active slots are full!"
-		"Citadel_Shop_SellMaxItems_Desc"							"To complete this purchase, select a mod to <span class='highlight'>sell for half price and replace</span>"
+		"Citadel_Shop_SellMaxItems_Title"							"Item Slots Full"
+		"Citadel_Shop_SellMaxItemsActive_Title"						"Active Slots Full"
+		"Citadel_Shop_SellMaxItems_Desc"							"Select an item to <span class='highlight'>replace</span>"
 		"Citadel_Shop_SellMaxItems_SellButton"						"Sell"
-		"Citadel_Shop_SellMaxItems_Recommended"						"Lowest Tier"
+		"Citadel_Shop_SellMaxItems_Recommended"						"Recommended"
 
 		"Citadel_Shop_PickEnhanceItem_Title"						"Enhance an item"
 		"Citadel_Shop_PickEnhanceItem_Desc"							"Pick which item you'd like to enhance"
@@ -969,7 +969,7 @@
 		"Citadel_QueueOptions_Button"								"Queue Options"
 		"Citadel_QueueOptions_Modal_Title"							"Matchmaking"
 		"Citadel_QueueOptions_Modal_Title_confirm_reset"			"Are you sure you want to reset your matchmaking setting to the default?"
-		"Citadel_QueueOptions_Modal_Title_reset_tooltip"			"Restore default matchmaking settings."
+		"Citadel_QueueOptions_Modal_Title_reset_tooltip"			"Restore default matchmaking setting."
 		"Citadel_TeamOptions_Modal_Title"							"Team"
 		"citadel_settings_mm_preference_text"						"Extra competitive"
 		"citadel_settings_mm_preference_serious_desc"				"You prefer to play with others who are looking for higher levels of coordination, communication, and competitiveness.<br><br>Note: If you are currently in a party, changing this setting will only affect matchmaking for your current party. Upon leaving the party, this setting will revert to its previous value."
@@ -2607,7 +2607,7 @@
 		"citadel_settings_videodefaults"				"Restore Defaults"
 		"citadel_settings_enable_console"				"Dev command console"
 		"citadel_settings_enable_console_tooltip"		"If you have launch options like -dev or -console that enable the console they override this setting."
-		"citadel_settings_quick_cast_desc"				"Quick Cast mode:"
+		"citadel_settings_quick_cast_desc"				"Casting mode:"
 		"citadel_settings_quick_cast_items_desc"		"Active item casting"
 		"citadel_settings_quick_cast_global"			"Casting mode"
 		"citadel_settings_quick_cast_global_desc"		"Sets the casting mode for all hero abilities globally."
@@ -2621,7 +2621,7 @@
 		"citadel_settings_quickcast_item_default"		"Item Default"
 		"citadel_settings_quickcast_enabled"			"Instant Cast"
 		"citadel_settings_quickcast_disabled"			"Quick Cast"
-		"citadel_settings_quickcast_default_tooltip"		"Uses the item's default Quick Cast mode."
+		"citadel_settings_quickcast_default_tooltip"		"Uses the ability or item's default Quick Cast mode."
 		"citadel_settings_quickcast_confirm_cast_tooltip"	"Select an ability by pressing its ability button, then cast it by pressing the Fire button."
 		"citadel_settings_quickcast_enabled_tooltip"		"Cast an ability when its ability button is pressed."
 		"citadel_settings_quickcast_disabled_tooltip"		"Select an ability while pressing its ability button and cast it when the ability button is released."
@@ -2660,7 +2660,7 @@
 		"citadel_settings_interface_reset_tooltip"		"Restore default interface settings."
 		"citadel_settings_shop"							"Shop"
 		"citadel_settings_shop_confirm_reset"			"Are you sure you want to reset your shop setting?"
-		"citadel_settings_shop_reset_tooltip"			"Restore default shop settings."
+		"citadel_settings_shop_reset_tooltip"			"Restore default shop setting."
 		"citadel_enable_ping_indicator"					"HUD ping indicator"
 		"citadel_settings_alt_cast_mode_section"		"Alternate Cast"
 		"citadel_settings_alt_cast_mode"				"Alternate cast mode"
@@ -2766,7 +2766,7 @@
 		"citadel_settings_language_options"				"Language Options"
 		"citadel_settings_reset_language_tooltip"		"Restore default language settings."
 		"citadel_reset_language"						"Reset Language Settings?"
-		"citadel_confirm_reset_language"				"Are you sure you want to restore default settings?<br>This will not change your primary language."
+		"citadel_confirm_reset_language"				"Are you sure you want to restore default settings?<br>This will not change your primary in-game text language."
 		"citadel_settings_ui_language"					"In-game text"
 		"citadel_settings_ui_language_tooltip"			"Set the primary UI language."
 		"citadel_settings_language_change_title"		"Change Pending"
@@ -3106,7 +3106,8 @@
 		"citadel_keybind_down"							"Fly down"
 		"citadel_keybind_mantle"						"Jump / mantle"
 		"citadel_keybind_attack"						"Fire"
-		"citadel_keybind_ads"							"Alt-fire"
+		"citadel_keybind_ads"							"Zoom / alt-fire"
+		"citadel_keybind_ads_search"					"ADS aim down sights"
 		"citadel_keybind_reset_camera"					"Reset camera"
 		"citadel_keybind_ping"							"Ping / Chat Wheel"
 		"citadel_keybind_quick_response"				"Quick Response"
@@ -3642,7 +3643,7 @@
 		"Select_Hero_Title"							"Select Hero"		
 		//"MyRoster_SelectHeroes"						"<span class=\"highlight\">Select Heroes</span> to add or remove them from your Roster."
 		//"MyRoster_PreferHeroes"						"<span class=\"highlight\">Star a hero</span> to prefer them for the next match."
-		"ConfirmRoster_BadRoster"					"You need at least {d:min_roster_size} heroes in your Roster to join a match."
+		"ConfirmRoster_BadRoster:f"					"You need at least {d:min_roster_size} {min_roster_size, plural, one{hero} other{heroes}} in your roster to join a match."
 		"SelectHeroFromRoster"						"Select a hero from your roster to play"
 		"MyRosterAddHeroes"							"Add Heroes"
 		"MyRosterConfirm"							"Confirm"
@@ -3651,7 +3652,7 @@
 		"MyRosterSaveAndBack"						"Save and Back"
 		"MyRosterCancelForEveryone"					"Cancel for all in party"
 		"MyRosterRosterEmpty"						"ROSTER EMPTY"
-		"MyRosterRosterDesc"						"Minimum {d:min_roster_size} Heroes required to Queue"
+		"MyRosterRosterDesc:f"						"Minimum {d:min_roster_size} {min_roster_size, plural, one{hero} other{heroes}} required to queue"
 		"MyRosterSelectHero"						"Select a Hero"
 		"MyRosterNoHeroDesc"						"You will be assigned one of these heroes to play when you enter the match."
 		"MyRosterNumHeroesInRoster"					"{i:num_heroes_in_roster} HEROES IN ROSTER"
@@ -3688,7 +3689,7 @@
 		"MyRosterPartyMemberRoster"					"Hero Already in Rosters:"
 
 		"MyRosterRosterDesc_MinNonNew"				"Your roster needs at least {d:min_non_new_heroes} or more heroes that are not new"
-		"MyRosterRosterDesc_NeedsMoreNonNew"		"At least {d:min_non_limited_heroes} non-new heroes required to queue"
+		"MyRosterRosterDesc_NeedsMoreNonNew:f"		"At least {d:min_non_limited_heroes} non-new {min_non_limited_heroes, plural, one{hero} other{heroes}} required to queue"
 		"MyRosterRosterDesc_PartyInvalid"			"Can't form a valid team with your Party's rosters."
 		"MyRosterRosterDesc_HeroLabs"				"Your roster needs at least 3 Heroes, 2 of which must be standard, non-testing Heroes"
 		"MyRosterRosterDesc_NeedsMoreNonNewOld"		"You have too many new heroes in your roster. Please add some more heroes to your roster that aren't new"
