6290 | 12 files | M game/citadel/bin/win64/client_strings.txt,  M game/citadel/bin/win64/server_strings.txt,  M game/citadel/pak01_dir.txt,  M game/citadel/pak01_dir/panorama/styles/hud_team_objective_health.css,  M game/citadel/pak01_dir/pulse/maps/dl_midtown.vpulse,  M game/citadel/pak01_dir/scripts/abilities.vdata,  M game/citadel/pak01_dir/scripts/heroes.vdata,  M game/citadel/pak01_dir/scripts/modifiers.vdata,  M game/citadel/pak01_dir/scripts/npc_units.vdata,  M game/citadel/pak01_dir/soundevents/hero/familiar.vsndevts,  M game/citadel/resource/localization/citadel_heroes/citadel_heroes_english.txt,  M game/citadel/steam.inf
https://steamdb.info/patchnotes/21914604/

--- a/game/citadel/resource/localization/citadel_heroes/citadel_heroes_english.txt
+++ b/game/citadel/resource/localization/citadel_heroes/citadel_heroes_english.txt
@@ -4333,8 +4333,8 @@
 
 		"ability_familiar_ability02" "Pillow Toss"
 		"ability_familiar_ability02_desc" "Throw your trusty pillow inflicting {g:citadel_inline_attribute:'SpiritDamage'} and heavy {g:citadel_inline_attribute:'KnockBack'}.<br><br>Landing hits reduces the cooldown of your other abilities."
-		"ability_familiar_ability02_t2_desc" "Applies -{s:FireRateSlow}% Fire Rate"
-		"ability_familiar_ability02_t3_desc" "+{s:Damage} Damage and +{s:Radius}m Radius"
+		"ability_familiar_ability02_t2_desc" "+{s:Radius}m Radius and applies -{s:FireRateSlow}% Fire Rate"
+		"ability_familiar_ability02_t3_desc" "+{s:Damage} Damage and +1 Charge"
 	 	"BonusRadius_postvalue_label" "Bonus Radius"
 	 	"BonusRadius_postfix" "m"
 		
@@ -4697,10 +4697,13 @@
 
 		"ability_priest_knockback" "Gutshot"
 		"ability_priest_knockback_desc" "Fire a blast with your shotgun, dealing {g:citadel_inline_attribute:'WeaponDamage'} and pushing enemies back. Enemies near a wall receive {g:citadel_inline_attribute:'Stun'} and take {g:citadel_inline_attribute:'BonusWeaponDamage'}."
-		"ability_priest_knockback_t2_desc" "<span class=\"highlight\">{s:AbilityCooldown}s</span> Ability Cooldown and <span class=\"highlight\">+{s:AbilityCastRange}m</span> Ability Range"
+		"ability_priest_knockback_t2_desc" "<span class=\"highlight\">{s:AbilityCooldown}s</span> Ability Cooldown and <span class=\"highlight\">+{s:StunDuration}s</span> Stun Duration"
 		"ability_priest_knockback_t3_desc" "On Wall Stun: Your next heavy melee is <span class=\"highlight\">blessed</span>"
 		"ability_priest_knockback/debuff" "Gutshot"
 		"ability_priest_knockback/buff" "Gutshot"
+		"WallStunDistance_postvalue_label" "Wall Stun Range"
+		"WallStunDistance_label" "Wall Stun Range"
+		"WallStunDistance_postfix" "m"
 
 		"ability_priest_selfheal" "Potent Vapors"
 		"ability_priest_selfheal_desc" "Burn your censer, <span class=\"highlight\">reducing incoming damage</span> and {g:citadel_inline_attribute:'Healing'} over time.<br><br>You cannot attack while Potent Vapors is active."
@@ -4751,7 +4754,7 @@
 
 		"ability_priest_flashbang" "Consecrating Grenade"
 		"ability_priest_flashbang_desc" "Fire a grenade that bounces before exploding, dealing {g:citadel_inline_attribute:'WeaponDamage'} and setting enemies on fire. <br><br>Burning targets deal <span class=\"highlight\">{g:citadel_inline_attribute:'PureDamage'}</span> to enemies in the area and suffer from <span class=\"highlight\">reduced healing</span>."
-		"ability_priest_flashbang_t2_desc"	"<span class=\"highlight\">+{s:Radius}m</span> Explosion & Burn Radius"
+		"ability_priest_flashbang_t2_desc"	"<span class=\"highlight\">+{s:Radius}m</span> Radius & <span class=\"highlight\">+{s:BurnDuration}s</span> Burn Duration"
 		"ability_priest_flashbang_t3_desc"	"<span class=\"highlight\">{s:HealAmpReceivePenaltyPercent}%</span> Healing Reduction and allow Charges"
 		"ability_priest_flashbang_pure" "Consecrating Grenade - Pure"
 		"BurnRadius_postvalue_label" "Burn Radius"
@@ -4762,7 +4765,7 @@
 		"ability_priest_beartrap_desc" "Kick a trap that arms after a brief delay. <br><br>The trap springs on the first enemy it touches, dealing {g:citadel_inline_attribute:'SpiritDamage'}, applying {g:citadel_inline_attribute:'Immobilize'}, and <span class=\"highlight\">revealing</span> enemies for a duration afterwards."
 		"ability_priest_beartrap/debuff" "Revealed"
 		"ability_priest_beartrap/immobilize" "Hex-Lined Snap Trap"
-		"ability_priest_beartrap_t3_desc"	"You deal <span class=\"highlight\">+{s:IncomingDamagePercentFromCaster}%</span> damage against targets"
+		"ability_priest_beartrap_t3_desc"	"Deal <span class=\"highlight\">+{s:IncomingDamagePercentFromCaster}%</span> damage against revealed targets"
 
 	
 		//-----------------------------------------------------------------------------
@@ -4771,7 +4774,7 @@
 		"ability_melee_unicorn"		"Melee" 
 		
 		"ability_unicorn_radiantblast"				"Light Eater"
-		"ability_unicorn_radiantblast_desc"			"Blast enemies in a cone in front of you with a flare of light. Enemies hit take {g:citadel_inline_attribute:'SpiritDamage'} when attacked by Celeste and provides <span class=\"highlight\">spirit lifesteal</span>."
+		"ability_unicorn_radiantblast_desc"			"Blast enemies in a cone in front of you with a flare of light.  Blasted enemies take {g:citadel_inline_attribute:'SpiritDamage'} when attacked by {s:hero_name} and provides her <span class=\"highlight\">spirit lifesteal</span>."
 		"ability_unicorn_radiantblast_on_bullet_hit_desc" "On Bullet Hit"
 		"ability_unicorn_radiantblast_t2_desc"		"+{s:AbilityCastRange}m Cast Range and +{s:AbilityLifestealPercentHero}% Spirit Lifesteal"
 		"ability_unicorn_radiantblast_t3_desc"		"+{s:Damage} Damage and Increased Spirit Scaling"
